force-app/main/default/objects/Customer_Account_Details__c/Customer_Account_Details__c.object-meta.xml
<CustomObject>
    <label>Customer Account Detail</label>
    <nameField>
        <label>Customer Account Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Account Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>