force-app/main/default/objects/Customer_Account_Details__c/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>