force-app/main/default/objects/Customer_Account_Details__c/fields/Card_Blocking_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Blocking_Status__c</fullName>
    <defaultValue>&quot;Un-Blocked&quot;</defaultValue>
    <label>Card Blocking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Un-Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>