force-app/main/default/objects/Customer_Account_Details__c/fields/PIN_Code__c.field-meta.xml
<CustomField>
    <fullName>PIN_Code__c</fullName>
    <label>PIN Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>