force-app/main/default/objects/Customer_Account_Details__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>